--- a/CSS/Home.css
+++ b/CSS/Home.css
@@ -37,6 +37,8 @@ html {
 
 .h1home {
   margin-top: rem;
+  display: flex;
+  flex-direction: column;
 }
 
 .hometext {
@@ -667,18 +669,495 @@ button img {
   margin-top: 5rem;
 }
 
-
 /* Page6 */
-
 
 .pembatas3 {
   margin-top: 15rem;
-} 
+}
 .pembatas3 h1 {
   margin-top: 10rem;
-  font-family: 'Allura';
+  font-family: "Allura";
   font-size: 7rem;
   font-weight: lighter;
   text-align: center;
 }
 
+@media only screen and (max-width: 850px) {
+  .hometext h3 {
+    font-size: 1rem;
+    background-color: #2a5298;
+    margin-right: 5rem;
+  }
+  .h1home h1 {
+    font-size: 3rem;
+    display: flex;
+  }
+
+  .textpage2 {
+    font-family: "Comfortaa";
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    margin-top: 5rem;
+  }
+
+  .textpage2 h3 {
+    font-size: 0.6rem;
+    font-weight: 400;
+    color: #999999;
+  }
+  .textpage2 h1 {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-top: 30rem;
+  }
+
+  .fototext {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .foto2 .foto {
+    margin-left: 1.2rem;
+  }
+
+  .foto img {
+    width: 300px;
+    height: 300px;
+    background-color: #999999;
+    border-radius: 100%;
+  }
+
+  .icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    margin-top: 1.5rem;
+  }
+
+  .galery button:hover {
+    background-color: black;
+    color: #f0bc21;
+  }
+
+  .pembatas1 {
+    display: none;
+  }
+
+  .dalam {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
+    margin-top: 10rem;
+  }
+
+  .dalam h2 {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #ae8e24;
+  }
+  .dalam h1 {
+    font-size: 2.5rem;
+    font-weight: bold;
+    color: #808080;
+  }
+
+  .gabungan {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .gabungan h1,
+  h3 {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    color: #999999;
+  }
+
+  .salam {
+    display: flex;
+    gap: 1rem;
+    font-family: "Allura";
+    font-size: 1rem;
+    margin-left: 1.5rem;
+  }
+
+  .dalam h1 {
+    font-size: 2rem;
+  }
+
+  .salam h1 {
+    font-size: 1rem;
+  }
+
+  .gabungan h3 {
+    font-size: 0.5rem;
+  }
+
+  .countdown-container {
+    text-align: center;
+  }
+
+  h1 {
+    font-size: 2.5rem;
+    margin-bottom: 2rem;
+  }
+
+  #countdown {
+    display: flex;
+    gap: 1.5rem;
+  }
+
+  .time-box {
+    background-color: white;
+    padding: 1rem 2rem;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0 5px 15px #ae8e24;
+    width: 70px;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .time-box span {
+    display: block;
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+
+  .time-box span small {
+    margin-left: 1.5rem;
+  }
+
+  .time-box small {
+    font-size: 0.5rem;
+    color: #ccc;
+  }
+
+  .maps {
+    display: flex;
+    flex-direction: column;
+    margin-top: 5rem;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .fotoresepsi {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+  }
+
+  .fotonya1 {
+    width: 290px;
+    height: 450px;
+    border-radius: 1rem;
+    background: url("/Asset/Images/Group13.png");
+    background-size: cover;
+    background-position: center;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .fotonya1 h1 {
+    color: white;
+    font-size: 1.5rem;
+  }
+  .fotonya1 h3 {
+    color: white;
+  }
+  .fotonya1 h4 {
+    color: white;
+  }
+  .fotonya1 h5 {
+    color: white;
+    font-weight: lighter;
+    font-size: 10px;
+  }
+
+  .fotonya1 button {
+    width: 15rem;
+    height: 2.8rem;
+    color: white;
+    font-weight: lighter;
+    margin-top: 2.5rem;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    color: #caa838;
+    font-weight: bold;
+    border-radius: 0.5rem;
+    border: none;
+    background-color: white;
+  }
+
+  .fotonya2 {
+    width: 290px;
+    height: 450px;
+    border-radius: 1rem;
+    background: url("/Asset/Images/Group\ 11.png");
+    background-size: cover;
+    background-position: center;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .fotonya2 h1 {
+    color: white;
+    font-size: 1.5rem;
+  }
+  .fotonya2 h3 {
+    color: white;
+  }
+  .fotonya2 h4 {
+    color: white;
+  }
+  .fotonya2 h5 {
+    color: white;
+    font-weight: lighter;
+    font-size: 10px;
+  }
+
+  .fotonya2 button {
+    width: 15rem;
+    height: 3rem;
+    color: white;
+    font-weight: lighter;
+    margin-top: 2.5rem;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    color: #caa838;
+    font-weight: bold;
+    border-radius: 0.5rem;
+    border: none;
+    background-color: white;
+  }
+  .endtext {
+    display: none;
+  }
+
+  .pembatas2 {
+    display: none;
+  }
+
+  .page4 h1 {
+    color: #f0bc21;
+  }
+  
+  .page4 h3 {
+    margin-top: 4rem;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    font-size: 15px;
+  }
+  
+  .page4 h2 {
+    margin-top: 3rem;
+    color: #808080;
+    font-size: 20px;
+  }
+  
+  .foto-nikah {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .foto-nikah2 img {
+    display: none;
+  }
+  
+  .pembatas2 {
+    margin-top: 10rem;
+  }
+  
+  .bungkuspg4 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 14rem;
+  }
+  
+  .bungkuspg4 h2 {
+    margin-top: 7rem;
+  }
+
+  .digital-wallet {
+    width: 100%;
+    max-width: 500px;
+    background: #ffffff;
+    border-radius: 1rem;
+    padding: 2rem;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: start;
+  }
+  
+  .header h2 {
+    color: #333;
+    margin: 0;
+  }
+  
+  .header h3 {
+    color: #777;
+    font-size: 0.9rem;
+    margin: 0.5rem 0 1.5rem;
+    margin-top: 1rem;
+  }
+  
+  .header {
+    justify-content: start;
+    align-items: start;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .name {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .wallet-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+  }
+  .wallet-container2 {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+    align-items: start;
+    justify-content: start;
+    margin-top: 2rem;
+  }
+  
+  .rekening-box {
+    background: #f5f5f5;
+    border-radius: 8px;
+    padding: 0.8rem 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    transition: transform 0.2s, 0.2s;
+  }
+  
+  .rekening-box2 {
+    background: #f5f5f5;
+    border-radius: 8px;
+    padding: 0.8rem 1rem;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    transition: transform 0.2s, 0.2s;
+  }
+  
+  .rekening-box:hover {
+    background: #dce7ff;
+    transform: translateY(-2px);
+  }
+  .rekening-box2:hover {
+    background: #dce7ff;
+    transform: translateY(-2px);
+  }
+  
+  .rekening-box p {
+    margin: 0;
+    font-size: 1rem;
+    font-weight: bold;
+    color: #333;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+  }
+  
+  .button button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    background: #2a5298;
+    color: #fff;
+    padding: 0.8rem 1.5rem;
+    font-size: 1rem;
+    font-weight: bold;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: 0.2s, transform 0.2s;
+  }
+  
+  button img {
+    width: 20px;
+    height: 20px;
+  }
+  
+  .gift {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 2.5rem;
+    margin-top: 5rem;
+  }
+  
+  .Ofline {
+    width: 550px;
+    height: 300px;
+    background: #ffffff;
+    border-radius: 1rem;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+    margin-bottom: 4rem;
+  }
+  
+  .Ofline h1 {
+    font-size: 1.5rem;
+  }
+  
+  .Ofline button {
+    width: 250px;
+    height: 3rem;
+  }
+  
+  .button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+  }
+  
+  .text-of {
+    padding: 2rem;
+  }
+}
